@@ -1,0 +1,23 @@
+#!/bin/sh
+# Copyright 2013  Lars Wirzenius
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+# The clients command can be run even by a client not in the list of clients
+# that previously did a backup.
+
+set -eu
+
+$SRCDIR/tests/backup
+$SRCDIR/obnam -r $DATADIR/repo --client=someotherclient clients
